@@ -1,4 +1,9 @@
 2005-05-23  wrobell <wrobell@pld-linux.org>
+	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0
+	navigability support is back with fixed bug which caused problems when
+	loading large UML model
+
+2005-05-23  wrobell <wrobell@pld-linux.org>
 	* gaphor/UML/uml2.override: while loading model, the association can be
 	not loaded when accessing opposite property
 
